--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ h3 {
   margin-right: auto;
   margin-top: 8px;
   margin-bottom: 8px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .6);
-  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  box-shadow: 0 0 148px 38px rgba(0, 0, 0, .8);
+  -webkit-box-shadow: 0 0 148px 38px rgba(0, 0, 0, .6);
+  -moz-box-shadow: 0 0 148px 38px rgba(0, 0, 0, .8);
 }
 
 .button {
